--- a/strona_cv/Untitled-1.html
+++ b/strona_cv/Untitled-1.html
@@ -12,7 +12,14 @@
   <meta property="og:url" content="https://twojadomena.pl" />
   <meta property="og:image" content="https://twojadomena.pl/og-image.jpg" />
   <link rel="icon" href="/favicon.ico" />
-  <script src="https://cdn.tailwindcss.com"></script>
+ <!-- Konfiguracja Tailwinda: dark mode sterowany klasą .dark -->
+<script>
+  // CDN Tailwinda czyta to ustawienie i użyje 'class' zamiast 'media'
+  window.tailwind = window.tailwind || {};
+  tailwind.config = Object.assign({}, tailwind.config || {}, { darkMode: 'class' });
+</script>
+<script src="https://cdn.tailwindcss.com"></script>
+
   <style>
     @media print {
       .no-print { display: none !important; }
@@ -22,6 +29,15 @@
   </style>
   <script>
     // Jednolity zapis motywu w localStorage
+    (function() {
+      const stored = localStorage.getItem('theme');
+      if (stored === 'dark' || (!stored && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark');
+      }
+    })();
+  </script>
+   <script>
+    // Skrypt odpowiedzialny za zapamiętywanie motywu (jasny/ciemny) w localStorage
     (function() {
       const stored = localStorage.getItem('theme');
       if (stored === 'dark' || (!stored && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -61,10 +77,11 @@
       </nav>
       <div class="flex items-center gap-2">
         <a href="/CV-Patryk-Adamski.pdf" class="no-print inline-flex items-center rounded-xl border border-slate-300 dark:border-slate-700 px-3 py-1.5 text-sm hover:bg-slate-50 dark:hover:bg-slate-900" download>📄 Pobierz CV</a>
-        <button id="themeToggle" class="no-print inline-flex items-center rounded-xl border border-slate-300 dark:border-slate-700 px-3 py-1.5 text-sm" aria-label="Przełącz motyw">🌓</button>
+        
       </div>
     </div>
   </header>
+  
 
   <!-- Sekcja hero -->
   <section id="hero" class="relative">
@@ -87,7 +104,7 @@
   <section id="o-mnie" class="border-t border-slate-200 dark:border-slate-800">
     <div class="max-w-5xl mx-auto px-4 py-12">
       <h2 class="text-2xl font-semibold">O mnie</h2>
-      <p class="mt-3 text-slate-700 dark:text-slate-300 max-w-3xl">Hej, mam na imię Patryk i studiuję Informatykę i Ekonometrię. Uczę się szybko, jestem sumienny i chętnie podejmuję wyzwania. Poza światem danych pasjonuję się literaturą klasyczną, ornitologią i inwestowaniem.</p>
+      <p class="mt-3 text-slate-700 dark:text-slate-300 max-w-3xl">Mam na imię Patryk i studiuję Informatykę i Ekonometrię. Uczę się szybko, jestem sumienny i chętnie podejmuję wyzwania. Poza światem danych pasjonuję się literaturą klasyczną, ornitologią i inwestowaniem.</p>
       <ul class="mt-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-3 text-sm">
         <li class="p-3 rounded-xl border dark:border-slate-800">⚡ Szybka nauka nowych technologii</li>
         <li class="p-3 rounded-xl border dark:border-slate-800">✅ Sumienność i dbałość o szczegóły</li>
@@ -110,6 +127,7 @@
             <span class="rounded-full border px-3 py-1">MS Office</span>
             <span class="rounded-full border px-3 py-1">HTML</span>
             <span class="rounded-full border px-3 py-1">SQL</span>
+            <span class="rounded-full border px-3 py-1">Python</span>
           </div>
         </div>
         <div>
@@ -202,9 +220,9 @@
               <span class="rounded-full border px-2 py-1">Plot</span>
             </div>
             <div class="mt-4 flex gap-3 text-sm">
-              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://demo-projektu.pl" target="_blank" rel="noopener">Demo</a>
+              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Projekt-python-covid19" target="_blank" rel="noopener">Repozytorium</a>
               <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Projekt-python-covid19/blob/master/data_and_graph.py" target="_blank" rel="noopener">Kod</a>
-              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Projekt-python-covid19/blob/master/README.md" target="_blank" rel="noopener">Case study</a>
+              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Projekt-python-covid19/blob/master/README.md" target="_blank" rel="noopener">Readme</a>
             </div>
           </div>
         </article>
@@ -224,31 +242,32 @@
               <span class="rounded-full border px-2 py-1">SQL </span>
             </div>
             <div class="mt-4 flex gap-3 text-sm">
-              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://demo-projektu.pl" target="_blank" rel="noopener">Demo</a>
+              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Sql" target="_blank" rel="noopener">Repozytorium</a>
               <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Sql/blob/master/main.py" target="_blank" rel="noopener">Kod</a>
-              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Sql/blob/master/README.md" target="_blank" rel="noopener">Case study</a>
+              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Sql/blob/master/README.md" target="_blank" rel="noopener">Readme</a>
             </div>
           </div>
         </article>
         <!-- Kopiuj więcej kart wg potrzeby -->
          <!-- Karta projektu -->
         <article class="rounded-2xl border dark:border-slate-800 overflow-hidden">
-          <img src="photos/deaths_smoothed.png" alt="Zrzut ekranu projektu 1" class="w-full aspect-video object-cover" />
+          <img src="photos/ekonom.png" alt="Zrzut ekranu projektu 1" class="w-full aspect-video object-cover" />
           <div class="p-4">
-            <h3 class="font-medium">📊 Analiza danych sprzedażowych z użyciem SQLite i SQL
+            <h3 class="font-medium">📊 Modelowanie i prognozowanie cen złota (2003–2020)
+
 </h3>
-            <p class="text-sm text-slate-600 dark:text-slate-300 mt-1">Projekt przedstawia prostą bazę danych sprzedażowej oraz zestaw zapytań SQL do analizy danych biznesowych. Wykorzystuje SQLite jako bazę danych i pandas do odczytu wyników w Pythonie.
+            <p class="text-sm text-slate-600 dark:text-slate-300 mt-1">Projekt zaliczeniowy z ekonometrii, którego celem było zbudowanie i oszacowanie modelu ekonometrycznego wyjaśniającego zmienność cen złota (USD/oz) w latach 2003–2020 z wykorzystaniem wybranych zmiennych makroekonomicznych.
 
 </p>
             <div class="mt-3 flex flex-wrap gap-2 text-xs">
-              <span class="rounded-full border px-2 py-1">SQLite</span>
-              <span class="rounded-full border px-2 py-1">Pandas</span>
-              <span class="rounded-full border px-2 py-1">SQL </span>
+              <span class="rounded-full border px-2 py-1">Excel</span>
+              <span class="rounded-full border px-2 py-1">R/Gretl</span>
+              <span class="rounded-full border px-2 py-1">Overleaf</span>
             </div>
             <div class="mt-4 flex gap-3 text-sm">
-              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://demo-projektu.pl" target="_blank" rel="noopener">Demo</a>
-              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Sql/blob/master/main.py" target="_blank" rel="noopener">Kod</a>
-              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Sql/blob/master/README.md" target="_blank" rel="noopener">Case study</a>
+              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Projekt-ekonometria" target="_blank" rel="noopener">Repozytorium</a>
+              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Projekt-ekonometria/blob/main/model-gold-finall%20(1).rmd" target="_blank" rel="noopener">Kod</a>
+              <a class="inline-flex items-center rounded-lg border px-3 py-1.5 hover:bg-slate-50 dark:hover:bg-slate-900" href="https://github.com/patrykadams/Projekt-ekonometria/blob/main/README.md" target="_blank" rel="noopener">Readme</a>
             </div>
           </div>
         </article>
@@ -265,14 +284,14 @@
         <li class="rounded-xl border dark:border-slate-800 p-4">
           <div class="flex items-baseline justify-between gap-4">
             <span class="font-medium">Data Camp</span>
-            <a href="https://github.com/patrykadams/certyfikaty/tree/main/Data%20Camp/czyszczenie_danych_r"class="text-xs">Zobacz</a>
+            <a href="https://github.com/patrykadams/certyfikaty/tree/main/Data%20Camp/czyszczenie_danych_r"class="text-xs"target="_blank" rel="noopener">Zobacz</a>
           </div>
           <p class="text-slate-600 dark:text-slate-300 mt-1">Czyszczenie danych w R, python</p>
         </li>
         <li class="rounded-xl border dark:border-slate-800 p-4">
           <div class="flex items-baseline justify-between gap-4">
             <span class="font-medium">Certyfikaty - Santander</span>
-            <a href="https://github.com/patrykadams/certyfikaty/tree/main/Santander"class="text-xs">Zobacz</a>
+            <a href="https://github.com/patrykadams/certyfikaty/tree/main/Santander"class="text-xs"target="_blank" rel="noopener">Zobacz</a>
           </div>
           <p class="text-slate-600 dark:text-slate-300 mt-1" >AI, Power Bi, Data Science</p>
           
@@ -282,12 +301,25 @@
     </div>
   </section>
 
-  <!-- Kontakt -->
+    <!-- Kontakt -->
   <section id="kontakt" class="border-t border-slate-200 dark:border-slate-800">
     <div class="max-w-5xl mx-auto px-4 py-12">
       <h2 class="text-2xl font-semibold">Kontakt</h2>
-      <p class="mt-2 text-slate-600 dark:text-slate-300">Najchętniej: e‑mail <a class="underline" href="mailto:patrykadamski123@gmail.com">patrykadamski123@gmail.com</a> lub LinkedIn. Odpowiadam w 24h.</p>
-      <form class="mt-6 max-w-xl grid gap-3" action="mailto:patrykadamski123@gmail.com" method="post" enctype="text/plain">
-        <input aria-label="Imię" required name="Imię" placeholder="Imię" class="rounded-xl border px-3 py-2 bg-transparent" />
-        <input aria-label="E‑mail" required type="email" name="Email" placeholder="E‑mail" class="rounded-xl border px-3 py-2 bg-transparent" />
-        <textarea aria-label="Wiadomość" required name="Wiadomość" placeholder="Wiadomość" rows="5" class="
+      <p class="mt-2 text-slate-600 dark:text-slate-300">
+        ✉️ <a href="mailto:patrykadamski123@gmail.com" class="underline">patrykadamski123@gmail.com</a><br/>
+        💼 <a href="https://www.linkedin.com/in/twoj-profil" class="underline" target="_blank" rel="noopener">LinkedIn</a><br/>
+        🖥️ <a href="https://github.com/patrykadams" class="underline" target="_blank" rel="noopener">GitHub</a>
+      </p>
+    </div>
+  </section>
+    <script>
+    // Obsługa przycisku zmiany motywu — przełącza klasę .dark na <html>
+    const btn = document.getElementById('themeToggle');
+    if (btn) {
+      btn.addEventListener('click', () => {
+        const root = document.documentElement;
+        const isDark = root.classList.toggle('dark');
+        localStorage.setItem('theme', isDark ? 'dark' : 'light');
+      });
+    }
+  </script>
